spacing and font size fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,13 +106,12 @@ body {
 
 @media (min-width: 75rem) {
   .header {
-    max-width: 31.875rem;
+    max-width: 32.5rem;
     margin: 0 auto 4rem;
   }
   .primary__heading {
     font-size: 2.25rem;
     letter-spacing: 0.25px;
-    margin-bottom: 1rem;
   }
 
   .cards__container {
